[package]
name = "rust-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(linux)'.dependencies]
procfs = "0.16.0"

[dependencies]
configparser = "3.0.4"
confy = "0.6.1"
notify = "6.1.1"
regex = "1.10.3"
reqwest = { version = "0.11", features = ["blocking"] }
sysinfo = "0.30.7"
walkdir = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
